crates/analyzer/tests/snapshots/errors__call_non_pub_fn_on_external_contract.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(&path, test_files::fixture(path))"

---
error: the function `do_private_thingz` on `contract Foo` is private
   ┌─ compile_errors/call_non_pub_fn_on_external_contract.fe:13:25
   │  
 6 │ ╭     fn do_private_thingz(self) {
 7 │ │         self.val = 100
 8 │ │     }
   │ ╰─────' `do_private_thingz` is defined here
   · │
13 │           Foo(address(0)).do_private_thingz()
   │                           ^^^^^^^^^^^^^^^^^ this function is not `pub`


